# hOBDA

./: .gitignore  README.md
MachineLearning/: Helpers.hs
MachineLearning/Maths/: Matrix.hs  Statistics.hs
MachineLearning/Requisitions/: Helpers.hs  IO.hs  Random.hs  Requisitions.hs
MachineLearning/Requisitions/Generate/: Generate  Generate.cabal  Main.hs  make.bat  make.sh
MachineLearning/Requisitions/InsertErrors/: InsertErrors  InsertErrors.cabal  Main.hs  make.sh
MachineLearning/Requisitions/RData/: Main.hs  RData  RData.cabal  RDataPlots.r  make.sh
MachineLearning/Requisitions/Visualize/: Main.hs  Visualize  Visualize.cabal  make.sh
docs/: MachineLearning-Helpers.html  MachineLearning-LinearRegression-LinearRegression.html  MachineLearning-Maths-Matrix.html  MachineLearning-Maths-Statistics.html  MachineLearning-NeuralNetwork-NeuralNetwork.html  MachineLearning-Requisitions-Helpers.html  MachineLearning-Requisitions-IO.html  MachineLearning-Requisitions-Random.html  MachineLearning-Requisitions-Requisitions.html  doc-index-33.html  doc-index-43.html  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  mini_MachineLearning-Helpers.html  mini_MachineLearning-LinearRegression-LinearRegression.html  mini_MachineLearning-Maths-Matrix.html  (+6 more)
